--- a/apps/client/src/widgets/dialogs/revisions.css
+++ b/apps/client/src/widgets/dialogs/revisions.css
@@ -3,67 +3,30 @@ body.mobile .revisions-dialog {
         height: 95vh;
     }
 
-    .modal-header {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.25em;
-        font-size: 0.9em;
-    }
-
-    .modal-title {
-        flex-grow: 1;
-        width: 100%;
-    }
-
-    .modal-body {
-        height: fit-content !important;
-        flex-direction: column;
-    }
-
     .modal-footer {
         font-size: 0.9em;
-    }
-
-    .revision-list {
-        height: fit-content !important;
-        max-height: 20vh;
-        border-bottom: 1px solid var(--main-border-color) !important;
-        padding: 0 1em;
-        flex-shrink: 0;
-    }
-
-    .modal-body > .revision-content-wrapper {
-        flex-grow: 1;
-        max-width: unset !important;
-        height: 100%;
-        margin: 0;
-        display: block !important;
-    }
-
-    .modal-body > .revision-content-wrapper > div:first-of-type {
-        flex-direction: column;
     }
 
     .revision-title {
         font-size: 1rem;
     }
 
-    .revision-title-buttons {
-        text-align: center;
-        display: flex;
-        gap: 0.25em;
+    .revision-toolbar-actions {
         flex-wrap: wrap;
     }
 
     .revision-content {
         padding: 0.5em;
-        height: fit-content;
     }
 }
 
 body.desktop .revisions-dialog {
     .revision-list {
         width: 300px;
+    }
+
+    .modal-content {
+        height: 80vh;
     }
 }
 
@@ -81,18 +44,6 @@ body.desktop .revisions-dialog {
     .modal-sidebar .dropdown-menu.static {
         background-color: transparent !important;
         border-radius: 0 !important;
-    }
-
-    .revision-sidebar-header {
-        padding: 0.75rem 1rem;
-        flex-shrink: 0;
-        text-align: center;
-        border-bottom: 1px solid var(--main-border-color);
-
-        h5 {
-            margin: 0;
-            font-size: 1em;
-        }
     }
 
     .revision-toolbar {
@@ -117,10 +68,6 @@ body.desktop .revisions-dialog {
         font-size: 0.85em;
         text-transform: uppercase;
         opacity: 0.6;
-    }
-
-    .modal-content {
-        height: 80vh;
     }
 
     .revision-content-wrapper {
